--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -12,8 +12,8 @@
   <!-- FAN CONTROL -->
   <div class="mb-5 border p-3">
     <h4>Fan System</h4>
-    <button class="btn btn-success me-2" onclick="controlFan('on')">Turn ON</button>
-    <button class="btn btn-danger" onclick="controlFan('off')">Turn OFF</button>
+    <button class="btn btn-success me-2" onclick="controlFan('FAN_ON')">Turn ON</button>
+    <button class="btn btn-danger" onclick="controlFan('FAN_OFF')">Turn OFF</button>
     <div id="fan-status" class="mt-2 text-muted"></div>
   </div>
 
