--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -44,7 +44,7 @@
           <button type="submit" class="btn btn-primary">Search</button>
         </div>
         <div class="mt-3">
-          <button class="btn btn-outline-green" onclick="downloadCSV()">Download CSV</button>
+          <button class="btn btn-outline-secondary" onclick="downloadCSV()">Download CSV</button>
         </div>
       </div>
     </form>
